--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pydantic~=2.10
-requests~=2.31
-sqlalchemy==2.0.19
+pydantic==2.5.0
+requests==2.31.0
+sqlalchemy==2.0.23
 psycopg2-binary==2.9.6
+fastapi==0.104.1
+uvicorn==0.23.2
